Fix awful text alignment at certain screen sizes for player cards

--- a/less/base/player-cards.less
+++ b/less/base/player-cards.less
@@ -107,6 +107,7 @@
 		font-size: 18px;
 		font-weight: 400;
 		color: #666;
+		text-align: left;
 	}
 
 	.address-group, .academic-group {
